--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Athisankar-2006/node-js#readme",
   "dependencies": {
+    "express": "^5.1.0",
     "lodash": "^4.17.21"
   }
 }
